--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -40,7 +40,7 @@
 					<% end %>
 				<% end %>
 				<% if @client.international %>
-				<p><strong>International Client</strong></p>
+				<p><strong><i class="fa fa-globe left"></i>International Client</strong></p>
 				<% end %>
 			</div>
 		</div>
