--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -15,6 +15,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'brandon-grotesque', sans-serif;
 }
 
+h1 {
+	margin-top: 0px;
+}
+
 img {
 	max-width: 100%;
 }
