Added dynamic page titles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= company_abbrv_name %> Biz Admin</title>
+  <title><%= yield(:title) %><%= company_abbrv_name %> Biz Admin</title>
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" />
