--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Edit Project ##{@project.id} | ") %>
 <section id="project-edit">
 	<div class="container">
 		<div class="row">
