--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Edit Invoice ##{@invoice.id} | ") %>
 <section id="invoice-edit">
 	<div class="container">
 		<div class="row">
