--- a/app/views/layouts/_financialdash.html.erb
+++ b/app/views/layouts/_financialdash.html.erb
@@ -5,36 +5,36 @@
 	</div>
 </div>
 <div class="row">
-	<div class="col-sm-3">
+	<div class="col-lg-3 col-lg-offset-0 col-md-8 col-md-offset-2">
 		<h3 class="text-center"><%= @today.strftime('%B') %></h3>
-		<p class="lead halfbottom">Paid: <span class="pull-right currency green"><%= number_to_currency(Invoice.where(:paid => true).where("strftime('%m', paiddate) + 0 = ?", @today.month).sum('cost'), { :negative_format => '(%n)' }) %></span></p>
+		<span class="lead">Paid: <span class="pull-right currency green"><%= number_to_currency(Invoice.where(:paid => true).where("strftime('%m', paiddate) + 0 = ?", @today.month).sum('cost'), { :negative_format => '(%n)' }) %></span></span>
 		<hr class="halfbottom">
-		<p class="lead">
+		<span class="lead">
 			Contract: <span class="pull-right currency text-info"><%= number_to_currency(Invoice.where(worktype: 'Contract').where("strftime('%m', date) + 0 = ?", @today.month).sum('cost'), { :negative_format => '(%n)' }) %></span><br>
 			Hourly: <span class="pull-right currency text-warning"><%= number_to_currency(Invoice.where(worktype: 'Hourly').where("strftime('%m', date) + 0 = ?", @today.month).sum('cost'), { :negative_format => '(%n)' }) %></span><br>
 			Retainer: <span class="pull-right currency text-muted"><%= number_to_currency(Invoice.where(worktype: 'Retainer').where("strftime('%m', date) + 0 = ?", @today.month).sum('cost'), { :negative_format => '(%n)' }) %></span>
-		</p>
+		</span>
 	</div>
-	<div class="col-sm-4 col-sm-offset-1">
+	<div class="col-lg-4 col-lg-offset-1 col-md-8 col-md-offset-2">
 		<h3 class="text-center">Active Goals</h3>
 		<% Goal.where('startdate <= ? AND enddate >=  ?', @today, @today).order('enddate DESC, amount DESC').each_with_index do |goal, index| %>
 			<% if index == 0 %>
-			<p class="lead halfbottom"><%= goal.timeperiod %> (<%= goal.goaltype %>): <span class="pull-right currency"><%= number_to_currency(goal.amount, { :negative_format => '(%n)' }) %></span></p>
+			<span class="lead"><%= goal.timeperiod %> (<%= goal.goaltype %>): <span class="pull-right currency"><%= number_to_currency(goal.amount, { :negative_format => '(%n)' }) %></span></span>
 			<hr class="halfbottom">
 			<% else %>
 			<span class="lead"><%= goal.timeperiod %> (<%= goal.goaltype %>): <span class="pull-right currency"><%= number_to_currency(goal.amount, { :negative_format => '(%n)' }) %></span></span><br>
 			<% end %>
 		<% end %>
 	</div>
-	<div class="col-sm-3 col-sm-offset-1">
+	<div class="col-lg-3 col-lg-offset-1 col-md-8 col-md-offset-2">
 		<h3 class="text-center"><%= @today.year %> YTD</h3>
-		<p class="lead halfbottom">Paid: <span class="pull-right currency green"><%= number_to_currency(Invoice.where(:paid => true).where("strftime('%Y', paiddate) + 0 = ?", @today.year).sum('cost'), { :negative_format => '(%n)' }) %></span></p>
+		<span class="lead">Paid: <span class="pull-right currency green"><%= number_to_currency(Invoice.where(:paid => true).where("strftime('%Y', paiddate) + 0 = ?", @today.year).sum('cost'), { :negative_format => '(%n)' }) %></span></span>
 		<hr class="halfbottom">
-		<p class="lead">
+		<span class="lead">
 			Contract: <span class="pull-right currency text-info"><%= number_to_currency(Invoice.where(worktype: 'Contract').where("strftime('%Y', date) + 0 = ?", @today.year).sum('cost'), { :negative_format => '(%n)' }) %></span><br>
 			Hourly: <span class="pull-right currency text-warning"><%= number_to_currency(Invoice.where(worktype: 'Hourly').where("strftime('%Y', date) + 0 = ?", @today.year).sum('cost'), { :negative_format => '(%n)' }) %></span><br>
 			Retainer: <span class="pull-right currency text-muted"><%= number_to_currency(Invoice.where(worktype: 'Retainer').where("strftime('%Y', date) + 0 = ?", @today.year).sum('cost'), { :negative_format => '(%n)' }) %></span>
-		</p>
+		</span>
 	</div>
 </div>
 <div class="row">
