--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -43,7 +43,7 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<h3>Invoices</h3>
-				<% if Invoice.where(projectid: @project.id).blank? %>
+				<% if @invoices.blank? %>
 				<p class="lead">No invoices.</p>
 				<% else %>
 				<table class="table table-condensed">
@@ -55,7 +55,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<% Invoice.where(projectid: @project.id).sort { |a,b| a.date <=> b.date }.each do |invoice| %>
+						<% @invoices.each do |invoice| %>
 						<tr id="invoicerow<%= invoice.id %>">
 							<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
 							<td class="text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% projectInvoiceTotal += invoice.cost else %>&mdash;<% end %></td>
