--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -53,6 +53,70 @@
 				<div id="monthlyRevenueChart" class="chart"></div>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-sm-12">
+				<h3>Unpaid Invoices</h3>
+				<% if @invoicesUnpaid.blank? %>
+				<p class="lead">No unpaid invoices issued in <%= @year.year %>.</p>
+				<% else %>
+				<table class="table table-condensed">
+					<thead>
+						<tr>
+							<th>Client</th>
+							<th>Issue Date</th>
+							<th class="text-center">Days Since Issued</th>
+							<th class="text-center hidden-xs">Type</th>
+							<th class="text-right">Cost</th>
+						</tr>
+					</thead>
+					<tbody>
+						<% @invoicesUnpaid.each do |invoice| %>
+						<tr id="invoicerow<%= invoice.id %>">
+							<td><%= link_to Client.find(invoice.clientid) do %><%= Client.find(invoice.clientid).name %><% end %></td>
+							<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
+							<td class="text-center"><%= Date.today.day - invoice.date.day %></td>
+							<td class="text-center hidden-xs"><%= invoice.worktype %></td>
+							<td class="text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
+						</tr>
+						<% end %>
+					</tbody>
+				</table>
+				<% end %>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12">
+				<h3>Paid Invoices</h3>
+				<% if @invoices.blank? %>
+				<p class="lead">No invoices.</p>
+				<% else %>
+				<table class="table table-condensed">
+					<thead>
+						<tr>
+							<th>Client</th>
+							<th>Issue Date</th>
+							<th>Paid Date</th>
+							<th class="text-center hidden-xs">Type</th>
+							<th class="text-right">Cost</th>
+							<th class="text-center">Paid?</th>
+						</tr>
+					</thead>
+					<tbody>
+						<% @invoices.each do |invoice| %>
+						<tr id="invoicerow<%= invoice.id %>">
+							<td><%= link_to Client.find(invoice.clientid) do %><%= Client.find(invoice.clientid).name %><% end %></td>
+							<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
+							<td><%= invoice.paiddate %></td>
+							<td class="text-center hidden-xs"><%= invoice.worktype %></td>
+							<td class="text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
+							<td class="text-center"><% if invoice.paid == true %><i class="fa fa-check green"></i><% else %><span class="spread red">Not Paid</span><% end %></td>
+						</tr>
+						<% end %>
+					</tbody>
+				</table>
+				<% end %>
+			</div>
+		</div>
 	</div>
 </section>
 
