Better progress bars

--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -46,11 +46,8 @@
 					</div>
 					<div class="col-sm-4">
 						<%
-							if @goal.timeperiod == 'Year'
-								@progress = number_to_percentage(@actualAmount / @goal.amount * 100, :strip_insignificant_zeros => true, :precision => 2)
-							elsif @goal.timeperiod == 'Month'
-								@progress = number_to_percentage(@actualAmount / @goal.amount * 100, :strip_insignificant_zeros => true, :precision => 2)
-							end
+							@progressRaw = @actualAmount / @goal.amount
+							@progress = number_to_percentage(@progressRaw * 100, :strip_insignificant_zeros => true, :precision => 2)
 						%>
 						<% if @goal.status == 'Past' %>
 						<p>
@@ -65,8 +62,10 @@
 						<%
 							@fullPeriodDays = (@goal.enddate - @goal.startdate + 1).to_f
 							@paceDays = (Date.today - @goal.startdate + 1).to_f
+							@paceRaw = @paceDays / @fullPeriodDays
+							@pace = number_to_percentage(@paceRaw * 100, :strip_insignificant_zeros => true, :precision => 2)
 						%>
-						<p><strong>Pace:</strong> <%= number_to_percentage(@paceDays / @fullPeriodDays * 100, :strip_insignificant_zeros => true, :precision => 2) %></p>
+						<p><strong>Pace:</strong> <%=  @pace %></p>
 						<p><strong>Progress:</strong> <%= @progress %></p>
 						<% elsif @goal.status == 'Future' %>
 						<p>
@@ -74,10 +73,20 @@
 						</p>
 						<% end %>
 						<% if @goal.status == 'Current' %>
-							<div class="progress">
-								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="<%= @progress %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= @progress %>">
-									<span class="sr-only"><%= @progress %> Complete (success)</span>
-								</div>
+							<%
+								if @progressRaw > @paceRaw
+									@firstLengthRaw = @paceRaw
+									@firstLength = @pace
+									@secondLength = number_to_percentage((@progressRaw - @paceRaw) * 100, :strip_insignificant_zeros => true, :precision => 2)
+								else
+									@firstLengthRaw = @progressRaw
+									@firstLength = @progress
+									@secondLength = number_to_percentage((@paceRaw - @firstLengthRaw) * 100, :strip_insignificant_zeros => true, :precision => 2)
+								end
+							%>
+							<div class="progress progress-striped">
+								<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="<%= @firstLength %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= @firstLength %>"></div>
+								<div class="progress-bar progress-bar-<% if @progressRaw > @paceRaw %>success<% else %>danger<% end %>" role="progressbar" aria-valuenow="<%= @secondLength %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= @secondLength %>"></div>
 							</div>
 						<% end %>
 					</div>
