--- a/app/views/invoices/show.pdf.erb
+++ b/app/views/invoices/show.pdf.erb
@@ -46,7 +46,7 @@
 				</div>
 				<div class="clearfix"></div>
 				<hr>
-				<p><%= @invoice.description %> <%= invoice_description_suffix %></p>
+				<p><%= @invoice.description %> <%= invoice_description_suffix %><% if @invoice.paid != true %> <%= invoice_description_suffix_pleasepay %><% end %></p>
 				<p class="indent">Thank you,<br><%= company_pay_to %><br><%= company_full_name %><br><%= company_email %><br><%= company_phone %></p>
 				<hr>
 				<% if !@invoice.lines.blank? %>
