--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -13,6 +13,7 @@
 					<%= link_to invoice_path(:format=>'pdf'), title: 'PDF' do %><i class="fa fa-fw fa-2x fa-file text-success"></i><% end %>
 					<%= link_to edit_invoice_path(@invoice), title: 'Edit' do %><i class="fa fa-fw fa-2x fa-pencil-square-o text-warning"></i><% end %>
 					<%= link_to invoice_path(@invoice), title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Invoice ##{@invoice.id}?" } do %><i class="fa fa-fw fa-2x fa-trash-o text-danger"></i><% end %>
+					<%= link_to email_invoice_path(@invoice), title: 'Send' do %><i class="fa fa-fw fa-2x fa-envelope text-success"></i><% end %>
 				</p>
 				<p>
 					<strong>Client:</strong>
@@ -54,25 +55,25 @@
 		</div>
 		<% if !@invoice.lines.blank? %>
 		<table class="table table-condensed">
-      <thead>
-        <tr>
-        	<th>&nbsp;</th>
-          <th>Description</th>
-          <th class="text-center">Hours</th>
-          <th class="text-center">Rate ($) per Hour</th>
-          <th class="text-center">Cost</th>
-        </tr>
-      </thead>
-      <tbody>
-	      <%= render @invoice.lines %>
-	      <tr>
-	      	<td>&nbsp;</td>
-	        <td class="text-right" colspan="3"><strong>Total</strong>&nbsp;&nbsp;</td>
-	        <td><strong><div class="pull-right"><%= number_to_currency(@invoice.lines.sum('total'), { :unit => '', :negative_format => '(%n)' }) %></div>$</strong></td>
-	      </tr>
-	    </tbody>
-	  </table>
-	  <% end %>
+			<thead>
+				<tr>
+					<th>&nbsp;</th>
+					<th>Description</th>
+					<th class="text-center">Hours</th>
+					<th class="text-center">Rate ($) per Hour</th>
+					<th class="text-center">Cost</th>
+				</tr>
+			</thead>
+			<tbody>
+				<%= render @invoice.lines %>
+				<tr>
+					<td>&nbsp;</td>
+					<td class="text-right" colspan="3"><strong>Total</strong>&nbsp;&nbsp;</td>
+					<td><strong><div class="pull-right"><%= number_to_currency(@invoice.lines.sum('total'), { :unit => '', :negative_format => '(%n)' }) %></div>$</strong></td>
+				</tr>
+			</tbody>
+		</table>
+		<% end %>
 		<h2>Add a line:</h2>
 		<%= render 'lines/form' %>
 		<div class="row hidden-print">
