--- a/app/views/invoices/email.html.erb
+++ b/app/views/invoices/email.html.erb
@@ -8,5 +8,10 @@
 				<p>An invoice email has been sent to <%= thisClient.name %>.</p>
 			</div>
 		</div>
+		<div class="row hidden-print">
+			<div class="col-sm-12">
+				<p><%= link_to 'Back', invoices_path %></p>
+			</div>
+		</div>
 	</div>
 </section>
