--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,11 +2,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<nav id="footer-nav">
+				<% if user_signed_in? %><nav id="footer-nav">
 					<ul>
-						<li><%= link_to 'Clients', clients_path %></li><li><%= link_to 'Projects', projects_path %></li><li><%= link_to 'Invoices', invoices_path %></li><li><%= link_to 'Goals', goals_path %></li><li><%= link_to Date.today.year, year_path(Date.today.year) %></li>
+						<li><%= link_to 'Clients', clients_path %></li><li><%= link_to 'Projects', projects_path %></li><li><%= link_to 'Invoices', invoices_path %></li><li><%= link_to 'Goals', goals_path %></li><li><%= link_to Date.today.year, year_path(Date.today.year) %></li><li><%= link_to destroy_user_session_path, :method => :delete do %>Sign Out<i class="fa fa-sign-out right"></i><% end %></li>
 					</ul>
-				</nav>
+				</nav><% end %>
 				<p>&copy; <%= company_full_name %></p>
 				<a href="<%= company_site_url %>" title="<%= company_full_name %>" class="hidden-print"><img id="footer-logo" src="<%= company_logo_alt_url %>" alt="<%= company_full_name %>"></a>
 			</div>
