--- a/app/views/invoices/show.pdf.erb
+++ b/app/views/invoices/show.pdf.erb
@@ -1,5 +1,5 @@
-<% thisClient = Client.find(@invoice.clientid) %>
-<% thisProject = Project.find(@invoice.projectid) %>
+<% thisClient = Client.find(@invoice.client_id) %>
+<% thisProject = Project.find(@invoice.project_id) %>
 
 <header class="pad">
 	<div class="container">
