--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -3,8 +3,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<% thisClient = Client.find(@invoice.clientid) %>
-				<% thisProject = Project.find(@invoice.projectid) %>
+				<% thisClient = Client.find(@invoice.client_id) %>
+				<% thisProject = Project.find(@invoice.project_id) %>
 				<% if !thisClient.logo.blank? %>
 				<%= image_tag(thisClient.logo.url(:medium), class: 'pull-right hidden-xs') %>
 				<% end %>
