--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -72,7 +72,7 @@
 					<tbody>
 						<% @invoicesUnpaid.each do |invoice| %>
 						<tr id="invoicerow<%= invoice.id %>">
-							<td><%= link_to Client.find(invoice.clientid) do %><%= Client.find(invoice.clientid).name %><% end %></td>
+							<td><%= link_to Client.find(invoice.client_id) do %><%= Client.find(invoice.client_id).name %><% end %></td>
 							<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
 							<td class="text-center"><%= (Date.today - invoice.date).to_i %></td>
 							<td class="text-center hidden-xs"><%= invoice.worktype %></td>
@@ -104,7 +104,7 @@
 					<tbody>
 						<% @invoices.each do |invoice| %>
 						<tr id="invoicerow<%= invoice.id %>">
-							<td><%= link_to Client.find(invoice.clientid) do %><%= Client.find(invoice.clientid).name %><% end %></td>
+							<td><%= link_to Client.find(invoice.client_id) do %><%= Client.find(invoice.client_id).name %><% end %></td>
 							<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
 							<td><%= invoice.paiddate %></td>
 							<td class="text-center hidden-xs"><%= invoice.worktype %></td>
